--- a/docs/_includes/mathjax.html
+++ b/docs/_includes/mathjax.html
@@ -10,7 +10,7 @@
 <script
   type="text/javascript"
   charset="utf-8"
-  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.6/config/Accessible-full.js"
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"
 >
 </script>
 <script
